sand-macros/tests/cases/fail_event_generic_not_advancement.stderr
error[E0277]: the trait bound `NotAnAdvancementEvent: AdvancementEvent` is not satisfied
 --> tests/cases/fail_event_generic_not_advancement.rs:7:25
  |
7 | pub fn bad(event: Event<NotAnAdvancementEvent>) {
  |                         ^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `AdvancementEvent` is not implemented for `NotAnAdvancementEvent`
 --> tests/cases/fail_event_generic_not_advancement.rs:4:1
  |
4 | pub struct NotAnAdvancementEvent;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `AdvancementEvent`:
            AnimalTamed
            AnimalsBreed
            AnyBlockPlaced
            AnyItemConsumed
            AnyItemCrafted
            AnyItemEnchanted
            BeeNestDestroyedEvent
            BrewPotionEvent
          and $N others

error[E0277]: the trait bound `NotAnAdvancementEvent: AdvancementEvent` is not satisfied
 --> tests/cases/fail_event_generic_not_advancement.rs:6:1
  |
6 | #[event]
  | ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `AdvancementEvent` is not implemented for `NotAnAdvancementEvent`
 --> tests/cases/fail_event_generic_not_advancement.rs:4:1
  |
4 | pub struct NotAnAdvancementEvent;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `AdvancementEvent`:
            AnimalTamed
            AnimalsBreed
            AnyBlockPlaced
            AnyItemConsumed
            AnyItemCrafted
            AnyItemEnchanted
            BeeNestDestroyedEvent
            BrewPotionEvent
          and $N others
  = note: this error originates in the attribute macro `event` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `sand_core::prelude`
 --> tests/cases/fail_event_generic_not_advancement.rs:1:5
  |
1 | use sand_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
